--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-select": "^3.20.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
   },
